<resources>
    <string name="app_name">Smart Travel Management</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_account">Create New Account</string>
    <string name="login_failed">Incorrect email or password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_hotel_detils">Add Hotel Details</string>
    <string name="add_City">Add City</string>
    <string name="type_of_rooms">Type of rooms</string>
    <string name="price_per_bed">Price per bed</string>
    <string name="single_bed">Single Bed</string>
    <string name="double_bed">Double Bed</string>
    <string name="cities">Cities</string>
    <string name="cancel">Cancel</string>
    <string name="owner_details">Owner Details</string>
    <string name="hotel_details">Hotel Details</string>
    <string name="hotel_facilities">Hotel Facilities</string>
    <string name="food_available">Food Available: </string>
    <string name="admin_panel">Admin Panel</string>
    <string name="title_activity_drawer_main">drawer_main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_hotels">Hotels</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="select_city">Select City</string>
    <string name="book_hotel">Book Hotel</string>
    <string name="first_name">First Name</string>
    <string name="hotel_booking">Hotel Booking</string>
    <string name="last_name">Last Name</string>
    <string name="single_bed_rooms">Single Bed Room(s)</string>
    <string name="double_bed_rooms">Double Bed Room(s)</string>
    <string name="adults">Adults</string>
    <string name="childrens">Childrens</string>
    <string name="number_of_persons">Number of Persons</string>
    <string name="check_in_date">Check-in Date</string>
    <string name="check_out_date">Check-out Date</string>
    <string name="dd_mm_yyyy">dd-MM-yyyy</string>
    <string name="comments">Comments</string>
    <string name="transport">Transport</string>
    <string name="book_transport">Book Transport?</string>
    <string name="booking_requests">Booking Requests</string>
    <string name="history">History</string>
    <string name="history_confirmed">History Confirmed</string>
    <string name="history_declined">History Declined</string>
    <string name="new_requests">New Requests</string>
    <string name="chat_with_admin">Chat with Admin</string>
    <string name="chats">Chats</string>
    <string name="weather_updates">Weather Updates</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="add_nearby_locations">Add Nearby Locations</string>
    <string name="nearby_locations">Nearby Locations</string>
    <string name="add_location">Add Location</string>
    <string name="select_car_type">Select Car Type</string>
    <string name="select_pickup_location">Select Pickup Location</string>
    <string name="transport_price">Transport Price</string>
    <string name="total_price">Total Price</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="feedback_message">Feedback Message</string>
    <string name="feedback">Feedback</string>
    <string name="discount_available">Discount Available?</string>
</resources>
