<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_fields_background_2"
    android:gravity="center"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".Login">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!--    Login Form Relative Layout-->
    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:gravity="center"
        android:visibility="visible">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <TextView
            android:id="@+id/login_failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="10dp"
            android:text="@string/login_failed"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_failed"
            android:layout_centerHorizontal="true"
            android:background="@color/colorSecondaryLight"
            android:onClick="Login"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:onClick="ForgetPassword"
                android:text="@string/forget_password"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:onClick="Register"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <!--    Registration Form Relative Layout-->
    <RelativeLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:gravity="center"
        android:visibility="gone">

        <EditText
            android:id="@+id/register_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="First Name"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/register_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_first_name"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="Last Name"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/register_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_last_name"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="Mobile Number"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/register_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_mobile_number"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="Email Address"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_email_address"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="Password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="Confirm Password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_confirm_password"
            android:layout_centerHorizontal="true"
            android:background="@color/colorSecondaryLight"
            android:onClick="CreateAccount"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/register_account_exist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="10dp"
            android:onClick="AccountExistBtn"
            android:text="@string/already_have_an_account"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <!--    Forget Password Form Relative Layout-->
    <RelativeLayout
        android:id="@+id/forget_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:gravity="center"
        android:visibility="gone">

        <EditText
            android:id="@+id/fp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="Enter Email"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/reset_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fp_email"
            android:layout_centerHorizontal="true"
            android:background="@color/colorSecondaryLight"
            android:onClick="ResetPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/reset_password" />

        <TextView
            android:id="@+id/fp_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reset_password_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:onClick="AccountExistBtn"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>