<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uzair.smarttravelmanagement.FeedBack">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:alpha="0.8"
        android:background="@drawable/add_fields_background_2" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Admin View Start-->
            <RelativeLayout
                android:id="@+id/fb_admin_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/fb_no_feedback_found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No Feedback Found"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fb_feedback_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:isScrollContainer="true" />
            </RelativeLayout>
            <!-- Admin View End-->

            <!-- User View Start-->
            <LinearLayout
                android:id="@+id/fb_user_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/fb_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/full_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/fb_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/mobile_number"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/fb_feedback_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="top"
                    android:hint="@string/feedback_message"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:scrollIndicators="right"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/fb_feedback_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="8dp"
                    android:background="@color/colorSecondaryLight"
                    android:elevation="100dp"
                    android:onClick="SendFeedbackBtn"
                    android:text="@string/menu_send"
                    android:textColor="@android:color/black"
                    android:visibility="visible" />

            </LinearLayout>
            <!-- User View End-->

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
