<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/add_nearby_locations"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/city_list_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <Spinner
            android:id="@+id/hotels_list_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="Location Name"
            android:textColor="@android:color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_location_image_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/add_location_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorSecondaryLight"
            android:src="@drawable/ic_image_gray_24dp"
            android:text="Select Images to Upload" />

        <ImageView
            android:id="@+id/add_location"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_add_location_gray_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/select_city_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:padding="10dp"
                android:text="@string/add_location"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@android:color/holo_red_light" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>